refactor: split membership lookup from auth assembly
MembershipService.resolveMemberships returned a fully-assembled
CamundaAuthentication, which conflated two responsibilities: looking
up the four membership fields, and constructing the auth object. The
name was also misleading after the lazy refactor since nothing was
actually resolved at call time.

Replace it with a newResolver(...) factory that returns a
MembershipResolver — a small interface exposing the four lookup
methods. Each converter now owns auth assembly and decides which
fields to wire on the CamundaAuthentication builder.

The split removes the empty-claims short-circuit added in the
preceding commit: BASIC auth simply doesn't wire
mappingRulesSupplier, so authenticatedMappingRuleIds() returns the
record's default empty list without any guard inside the service.

A convenience newResolver(String username) overload (default method)
keeps the BASIC call site terse while staying explicit that the OIDC
path is the primary entrypoint.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>